# omie-client

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: code-analysis.yml  publish.yml  release.yml  tests.yml
omie_client/: accounts_payable.py  bank_accounts.py  client.py  exceptions.py
tests/: test_client.py
tests/accounts_payable/: conftest.py  test_accounts_payable.py  test_get_by_erp_id.py  test_get_by_id.py
tests/bank_accounts/: conftest.py  test_list.py
