[tool.poetry]
name = "omie-client"
version = "0.1.0"
description = "Omie Client Python SDK"
authors = ["BHub Tech Team <tech-team@bhub.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
httpx = {extras = ["http2"], version = "^0.27.0"}
pydantic = "^2.7.4"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.10"
mypy = "^1.10.0"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
